# wgpu-compute-toy

./: .gitignore  Cargo.toml
examples/: spectral_clusters.wgsl  spectral_clusters.wgsl.json
src/: bind.rs  blit.rs  context.rs  lib.rs  main.rs  pp.rs  render.rs  utils.rs
