[package]
name = "wgputoy"
version = "0.1.1"
authors = ["David A Roberts <d@vidr.cc>"]
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3.0"
bytemuck = { version = "1.9.1", features = ["derive"] }
log = "0.4.17"
env_logger = "0.11.3"
num = "0.4.0"
regex = "1.5.6"
lazy_static = "1.4.0"
bitvec = "1.0.0"
lazy-regex = "3.1.0"
itertools = "0.12.1"
futures-intrusive = "0.5.0"
async-recursion = "1.0.0"
snailquote = "0.3.1"
indexmap = "2.2.5"

reqwest = "0.11.16"
reqwest-middleware = "0.2.4"
http-cache-reqwest = "0.13.0"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = { version = "0.29.14" }

[dependencies.wgpu]
version = "0.20.0"

[dependencies.image]
version = "0.24.2"
default-features = false
features = ["png", "jpeg", "hdr"]

[dependencies.instant]
version = "0.1.12"

[dependencies.cached]
version = "0.49.2"
default-features = false
features = ["proc_macro", "async"]

